[gd_scene load_steps=9 format=3 uid="uid://dojgkcnlpiq4v"]

[ext_resource type="Script" uid="uid://bbyco6g31h410" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyOverviews/UIMorpologyOverviews.gd" id="1_7f4of"]
[ext_resource type="PackedScene" uid="uid://bxqu4fr885cv2" path="res://BrainVisualizer/UI/GenericElements/Scroll/Morphology_List/MorphologyScroll.tscn" id="1_saprm"]
[ext_resource type="PackedScene" uid="uid://c8gpa1figwpvw" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDefinition/UIMorphologyDefinition.tscn" id="2_i6hmf"]
[ext_resource type="PackedScene" uid="uid://dyagjs5244b30" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyImage/UIMorphologyImage.tscn" id="3_chxvu"]
[ext_resource type="PackedScene" uid="uid://ba1t0ymgdahvl" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyUsage/UIMorphologyUsage.tscn" id="4_5atic"]
[ext_resource type="PackedScene" uid="uid://c5m4dalq0ept6" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDescription/UIMorphologyDescription.tscn" id="5_isl0m"]
[ext_resource type="PackedScene" uid="uid://c0v1sjxbjdmgb" path="res://BrainVisualizer/UI/GenericElements/Morphology_Views/UIMorphologyDeleteButton/UIMorphologyDeleteButton.tscn" id="7_26hxb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxism"]
bg_color = Color(0.2, 0.223529, 0.270588, 1)

[node name="UIMorphologyOverviews" type="HBoxContainer" node_paths=PackedStringArray("controls_to_scale_by_min_size")]
script = ExtResource("1_7f4of")
controls_to_scale_by_min_size = [NodePath("SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/SmartMorphologyView"), NodePath("SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UIMorphologyImage"), NodePath("SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UIMorphologyUsage"), NodePath("SelectedDetails/Details/MarginContainer/VBoxContainer/UIMorphologyDescription")]

[node name="Listings" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AddMorphology" type="Button" parent="Listings"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Define New Connectivity Rule"

[node name="MorphologyScroll" parent="Listings" instance=ExtResource("1_saprm")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="SelectedDetails" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectedDetails"]
layout_mode = 2

[node name="Gap" type="Control" parent="SelectedDetails/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="Name" type="Label" parent="SelectedDetails/HBoxContainer"]
layout_mode = 2
text = "No Connectivity Rule Loaded!"

[node name="Details" type="PanelContainer" parent="SelectedDetails"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SelectedDetails/Details"]
layout_mode = 2
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SelectedDetails/Details/MarginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SelectedDetails/Details/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vxism")

[node name="SmartMorphologyView" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer" instance=ExtResource("2_i6hmf")]
custom_minimum_size = Vector2(700, 256)
layout_mode = 2
title_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="UIMorphologyImage" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_chxvu")]
visible = false
custom_minimum_size = Vector2(192, 192)
layout_mode = 2

[node name="UIMorphologyUsage" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_5atic")]
custom_minimum_size = Vector2(192, 128)
layout_mode = 2
size_flags_vertical = 3

[node name="UIMorphologyDescription" parent="SelectedDetails/Details/MarginContainer/VBoxContainer" instance=ExtResource("5_isl0m")]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="SelectedDetails/Details/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Delete" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons" instance=ExtResource("7_26hxb")]
layout_mode = 2

[node name="Gap" type="Control" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Close" type="Button" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Close"

[node name="Update" type="Button" parent="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Update
"

[connection signal="pressed" from="Listings/AddMorphology" to="." method="_user_request_create_morphology"]
[connection signal="morphology_selected" from="Listings/MorphologyScroll" to="." method="_user_selected_morphology_from_scroll"]
[connection signal="pressed" from="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons/Delete" to="." method="_user_request_delete_morphology"]
[connection signal="pressed" from="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons/Close" to="." method="_user_requested_closing"]
[connection signal="pressed" from="SelectedDetails/Details/MarginContainer/VBoxContainer/Buttons/Update" to="." method="_user_requested_update_morphology"]
